# voice-inventory

./: .gitignore  CHANGELOG.md  README.md  go.mod  go.sum  voice-inventory-indexer-spec.md
.github/workflows/: ci.yml
TODO/: TODO.md
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  bridge_test_main.c  whisper_bridge.c  whisper_bridge.h  whisper_jni.c
asr/: asr.go  asr_test.go  exec.go  golden_audio_test.go  model.go
audio/: audio.go  audio_test.go  fuzz_test.go  stream.go  stream_test.go
cmd/vinv/: main.go  main_test.go  mockserver.go
config/: config.go  config_test.go
docs/: architecture.md  backend-protocol.md  cli.md  mobile-integration.md  operations.md  parsing.md  proposals.md  roadmap.md
export/: export.go  export_test.go
fuzzy/: fuzzy.go  fuzzy_test.go
grid/: fuzz_test.go  grid.go  grid_test.go
integration/: bench_test.go  pipeline_test.go
ios/: README.md  VoiceInventory-Bridging-Header.h
ios/VoiceInventory/: AppModel.swift  BatchReviewView.swift  CaptureView.swift  HelpView.swift  SettingsView.swift  VoiceInventoryApp.swift  (+1 more)
lang/: lang.go  lang_test.go  numword.go  tables_en.go  tables_es.go
mobile/: mobile.go  mobile_test.go
observation/: observation.go  observation_test.go
parser/: command.go  fuzz_test.go  golden_test.go  parser.go  parser_test.go
refdata/: refdata.go  refdata_test.go
session/: fuzz_test.go  session.go  session_test.go
store/: store.go  store_test.go
syncer/: syncer.go  syncer_test.go
vad/: vad.go  vad_test.go
(+11 files in other folders)
